--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>Henna Anttonen</p>
         </div>
         <div class = "info">
-            <p><i class="fas fa-map-marker-alt"></i> Leutkircher Str. 23  Wangen im Allgäu</p>
+            <p><i class="fas fa-map-marker-alt"></i> Wangen im Allgäu</p>
         </div>
         <div class = "info"> 
             <p><i class="fas fa-mobile-alt"></i> +49 1578 8720 830</p>
