--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
                     <h2 class = "thisisme">About Me</h2>
                     <p class = "thisisme"> Welcome to my portfolio. My name is Henna and I am a coder from Finland, currently living in Germany. My current interests lie in mainly Web Development and Software Development. The languages I am using are CSS, HTML, JavaScript and Python. 
                         <br>
-                        <br> 
-                    I am self taught and have been coding/teaching myself since beginning of February 2020. Beside coding when I have time I enjoy hiking up in the beautiful Alps, which are right next door to where I live. When not out in nature (sweating) I enjoy my coffee breaks and reading a really good fantasy book. As a part time side thing I also enjoy photography and you can go and take a look at my nature pictures on <a href = "https://www.instagram.com/projecthappify/" target = "_blank">instagram</a>.</p>
+                        <br>
+                    I am self taught and have been coding/teaching myself since the beginning of February 2020. Beside coding when I have th time I enjoy hiking up in the beautiful Alps, which are right next door to where I live. When not out in nature (sweating) I enjoy my coffee breaks and reading a really good fantasy book. As a part time side thing I also enjoy photography and you can go and take a look at my nature pictures on <a href = "https://www.instagram.com/projecthappify/" target = "_blank">Instagram</a>.
+                        <br>
+                        <br>
+                If you got interested in what I can do, please take a look at my projects below. As of now I don´t have any finished projects to show, but be sure I will be uploading them as I get them finished (I have a couple I am really excited to get finished). Beside the coding experience in case you want to know more about my professional past (it is a colorful past), please feel free to take a look at my <a href = "https://www.linkedin.com/in/henna-anttonen-119303145/" target = "_blank">Linkedin</a>.</p>     
                 </div>
             </div>
         </div>
@@ -61,7 +64,7 @@
             <p>Henna Anttonen</p>
         </div>
         <div class = "info">
-            <p><i class="fas fa-map-marker-alt"></i> Leutkircher Str. 23  Wangen im Allgäu</p>
+            <p><i class="fas fa-map-marker-alt"></i> Wangen im Allgäu</p>
         </div>
         <div class = "info"> 
             <p><i class="fas fa-mobile-alt"></i> +49 1578 8720 830</p>
